--- a/app.json
+++ b/app.json
@@ -33,7 +33,8 @@
         }
       ],
       "expo-barcode-scanner",
-      "expo-font"
+      "expo-font",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
