--- a/package.json
+++ b/package.json
@@ -20,41 +20,42 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
-    "expo": "^50.0.0",
+    "expo": "^5i3.0.9",
     "expo-barcode-scanner": "~12.9.3",
-    "expo-blur": "~12.9.2",
-    "expo-constants": "~15.4.6",
-    "expo-font": "~11.10.3",
-    "expo-haptics": "~12.8.1",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~2.9.4",
-    "expo-web-browser": "~12.8.2",
+    "expo-blur": "~14.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-router": "~5.0.6",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
     "nativewind": "^4.1.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-emoji-selector": "^0.2.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.13.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.6.4"
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
+    "expo-camera": "~16.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~53.0.5",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.3.3"
   }
