--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
-    "expo": "^5i3.0.9",
+    "expo": "^53.0.0",
     "expo-barcode-scanner": "~12.9.3",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
